tests/niminaction/Chapter2/no_iterator.nim
discard """
  errormsg: "type mismatch"
  line: 6
"""

for i in 5:
  echo i
